--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
 <h1>Home</h1>
 <a href="./phongshading-todo/Phongshading.html">HW3</a>
+<a href="./liminal_space/demo 能看的成品（略卡）.html">大作业</a>
+<a href="./liminal_space/demo 能看的成品（略卡）更精准的环境光遮蔽.html">大作业（环境遮罩精细版）</a>
 </body>
 </html>
